# Workdown

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  dist-workspace.toml  rust-toolchain.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
.workdown/: config.yaml  schema.yaml  views.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cli/: mod.rs  schema_args.rs
crates/cli/src/commands/: body.rs  mod.rs  move.rs  mutation_output.rs  query.rs  rename.rs  render.rs  serve.rs  set.rs  templates.rs  unset.rs  validate.rs
crates/cli/src/render/: bar_chart.rs  board.rs  chart_common.rs  common.rs  description.rs  gantt.rs  gantt_by_depth.rs  gantt_by_initiative.rs  gantt_common.rs  graph.rs  heatmap.rs  line_chart.rs  markdown.rs  mermaid_gantt.rs  metric.rs  mod.rs  svg_chart.rs  table.rs  test_fixtures.rs  tree.rs  treemap.rs  workload.rs
crates/core/: Cargo.toml
crates/core/defaults/: config.yaml  resources.schema.json  schema.schema.json  schema.yaml  views.schema.json  views.yaml
crates/core/defaults/templates/: bug-report.md
crates/core/examples/: gen_types.rs
crates/core/src/: config_check.rs  display_check.rs  generators.rs  item_data.rs  lib.rs  mutation_data.rs  project.rs  resources_check.rs  schema_data.rs  slug.rs  views_check.rs  walker.rs
crates/core/src/model/: assertion.rs  calendar.rs  color.rs  condition.rs  config.rs  diagnostic.rs  duration.rs  field_value.rs  mod.rs  resources.rs  rule.rs  schema.rs  views.rs  weekday.rs  work_item.rs
crates/core/src/operations/: add.rs  body.rs  diagnostics.rs  frontmatter_io.rs  init.rs  mod.rs  rename.rs  set.rs  templates.rs  validate.rs  view_write.rs
crates/core/src/operations/set/: boolean.rs  collection.rs  mod.rs  numeric.rs  temporal.rs  test_support.rs
crates/core/src/parser/: config.rs  mod.rs  resources.rs  schema.rs  template.rs  views.rs
crates/core/src/query/: clause.rs  engine.rs  eval.rs  format.rs  mod.rs  sort.rs  types.rs
crates/core/src/rules/: assertion.rs  condition.rs  mod.rs
crates/core/src/store/: coerce.rs  cycles.rs  mod.rs  rollup.rs
crates/core/src/view_data/: aggregate.rs  bar_chart.rs  board.rs  common.rs  filter.rs  gantt.rs  gantt_by_depth.rs  gantt_by_initiative.rs  graph.rs  heatmap.rs  line_chart.rs  metric.rs  mod.rs  table.rs  test_support.rs  traverse.rs  tree.rs  treemap.rs  workload.rs
crates/core/tests/: add.rs  init.rs  query.rs  templates.rs  validate_rules.rs  validate_views.rs  view_data.rs  views_schema.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  envelope.rs  error.rs  lib.rs  state.rs  watcher.rs
crates/server/src/api/: events.rs  items.rs  schema.rs  views.rs
crates/server/tests/: items_endpoint.rs  schema_endpoint.rs  views_endpoint.rs  views_write_endpoint.rs  watcher_live.rs
crates/server/tests/fixtures/project/.workdown/: config.yaml  schema.yaml  views.yaml
crates/server/tests/fixtures/project/workdown-items/: task-a.md  task-b.md  task-c.md
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
defaults/: resources.yaml  schema.schema.json  schema.yaml
docs/: schema.md  views.md
docs/adr/: 001-snapshot-validation.md  002-generic-field-types.md  003-computed-fields.md  004-rule-system.md  005-json-schema-editor-only.md  006-visualization-architecture.md  007-diagnostic-scope-typing.md  008-display-configuration.md
src/: generators.rs  lib.rs  main.rs  resolve.rs
src/cli/: mod.rs  output.rs  schema_args.rs
src/commands/: add.rs  init.rs  mod.rs  query.rs  templates.rs  validate.rs
src/model/: assertion.rs  condition.rs  config.rs  diagnostic.rs  mod.rs  rule.rs  schema.rs  template.rs
src/parser/: mod.rs  schema.rs  template.rs
src/query/: engine.rs  eval.rs  format.rs  parse.rs  sort.rs  types.rs
src/rules/: assertion.rs  condition.rs  mod.rs  resolve.rs
src/store/: coerce.rs  cycles.rs  mod.rs
tests/: add.rs  init.rs  query.rs  templates.rs  validate_rules.rs
ui/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: app.css  app.d.ts  app.html
ui/src/lib/api/: client.ts
ui/src/lib/diagnostics/: formatDiagnostic.ts  idsInDiagnostic.ts  idsInView.ts
ui/src/lib/dnd/: dnd.ts
ui/src/lib/filters/: FilterBar.svelte  FilterBuilder.svelte  FilterRow.svelte  clauses.test.ts  clauses.ts
ui/src/lib/items/: FieldEditor.svelte  ItemEditor.svelte  itemLink.ts
ui/src/lib/stores/: schema.svelte.ts  theme.svelte.ts
ui/src/lib/styles/: base.css  reset.css  tokens.css
ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
ui/static/: robots.txt
views/: dependencies.md  duration-over-time.md  effort-treemap.md  hierarchy.md  items-by-status.md  items-by-type-and-status.md  items-by-type.md  items.md  milestone-workload.md  project-stats.md  roadmap-by-depth.md  roadmap-by-duration.md  roadmap-by-initiative.md  roadmap-by-predecessor.md  roadmap.md  status-board.md
workdown-items/: adr-phase-04-architecture.md  aggregate-rollup.md  app-shell-navigation.md  cli-add-audit.md  cli-body-command.md  cli-move-command.md  cli-rename-command.md  cli-set-command.md  cli-set-modes.md  cli-unset-command.md  code-quality.md  color-display-slot.md  color-field-type.md  cross-cutting-helpers.md  diagnostic-scope-routing.md  diagnostic-variant-cleanup.md  display-defaults-validation.md  duration-comparison-rule.md  duration-field-type.md  explicit-in-operator.md  field-value-native-date.md  first-view-end-to-end.md  foundation-cleanup.md  foundation.md  frontend.md  gantt-duration-mode.md  gantt-predecessor-mode.md  git-derived-default-generator.md  html-renderer.md  item-mutations.md  live-updates.md  markdown-renderer.md  mermaid-renderer.md  multi-project-design.md  multi-project-support.md  mutations-slice.md  phase-04-visualization.md  polish.md  remaining-read-views.md  render-bar-chart.md  (+44 more)
(+55 files in other folders)
