[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/xtask",
]
# `cargo run` (without -p) targets the CLI. xtask is dev tooling
# invoked via the `cargo xtask` alias, never as the default binary.
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jasdefer/Workdown"
authors = ["Justus Bonz <justus.bonz@gmail.com>"]

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
