[package]
name = "workdown"
version = "0.1.0"
edition = "2021"
description = "Git-based project management — work items as Markdown files"

[[bin]]
name = "workdown"
path = "src/main.rs"

[dependencies]
workdown-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
console = "0.15"
comfy-table = "7"
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "chrono", "line_series", "point_series", "full_palette"] }

[dev-dependencies]
indexmap = { version = "2", features = ["serde"] }
