[package]
name = "workdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-based project management — work items as Markdown files"

[[bin]]
name = "workdown"
path = "src/main.rs"

[dependencies]
workdown-core = { path = "../core" }
workdown-server = { path = "../server" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "wrap_help", "env"] }
console = "0.15"
comfy-table = "7"
open = "5"
serde_json.workspace = true
serde_yaml.workspace = true
# serve.rs builds the runtime via `runtime::Builder` (no `#[tokio::main]`)
# and binds a `TcpListener`; no `macros`/`signal` (no shutdown handler yet).
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv.workspace = true
chrono = { workspace = true, features = ["clock"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "chrono", "line_series", "point_series", "full_palette"] }

[dev-dependencies]
indexmap.workspace = true
