[package]
name = "workdown-core"
version = "0.1.0"
edition = "2021"
description = "Workdown domain library — model, parser, store, query, rules, operations"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
regex = "1"
walkdir = "2"
csv = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
