[package]
name = "workdown-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workdown domain library — model, parser, store, query, rules, operations"
publish = false

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror = "2"
tracing.workspace = true
regex = "1"
walkdir = "2"
csv.workspace = true
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true, features = ["clock", "serde"] }
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl"] }

[dev-dependencies]
tempfile = "3"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
