[package]
name = "workdown-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workdown HTTP server"
publish = false

[dependencies]
workdown-core = { path = "../core" }
anyhow.workspace = true
axum = "0.8"
mime_guess = "2"
# debug-embed feature is OFF by default — debug builds read ui/dist/ from
# disk at runtime, release builds bake it in. Keeps `cargo check` / `cargo
# test` fast and pure-Rust during dev.
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
# Runtime only needs `net` (the `TcpListener`); the runtime itself is
# built by the CLI. `macros`/`rt` are test-only — see dev-dependencies.
tokio = { workspace = true, features = ["net"] }
tower = "0.5"
# catch-panic turns a handler panic into a 500 instead of a dropped
# connection — view_data::extract is documented to panic on invariants
# the validator is expected to have caught.
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing.workspace = true

[dev-dependencies]
# `#[tokio::test]` uses the current-thread runtime.
tokio = { workspace = true, features = ["rt", "macros"] }
# Mutation endpoint tests write to disk, so they run against a throwaway
# project copied into a tempdir — never the committed read-only fixture.
tempfile = "3"
